--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,11 @@
             <version>2.7</version>
         </dependency>
         <dependency>
+            <groupId>com.sikulix</groupId>
+            <artifactId>sikulixapi</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
             <groupId>ru.yandex.qatools.ashot</groupId>
             <artifactId>ashot</artifactId>
             <version>1.5.3</version>
